--- a/index.html
+++ b/index.html
@@ -2,39 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=h, initial-scale=1.0">
-    <title>그린 아카데미</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>디지털 디자인 교육 2차</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--웹사이트의 제목-->
+    <!-- 웹사이트의 제목 -->
     <header>
-        <h1>그린 아카데미</h1>
+        <h1>디지털 디자인 교육 2차</h1>
     </header>
-   
-     <!--섹션1 웹사이트 설명-->
+
+    <!-- 섹션1 웹사이트 설명 -->
     <section class="section1">
         <h2>여성 대상으로 진행되는 디자인 교육</h2>
         <p>비전공자를 위한 첫 코딩 챌린지</p>
     </section>
 
-     <!--섹션2 사진-->
-     <section class="section2">
+    <!-- 섹션2 사진 -->
+    <section class="section2">
         <span class="more">
             <a href="">더보기</a>
         </span>
         <div class="gallery">
             <div class="pic1">사진 들어갈 공간</div>
-            <div class="pic2">사진 들어갈 공간</div>
-            <div class="pic3">사진 들어갈 공간</div>
+            <div class="pic2">
+                <span>사진 들어갈 공간</span>
+            </div>
+            <!-- 글자와 배경을 따로 둘려면, 형제관계에 있어야한다 -->
+            <div class="pic-box">
+                <div class="text">사진이 들어갈 공간</div>
+                <div class="pic3"></div>    
+            </div>
+
         </div>
-        
+
     </section>
 
-      <!--푸터 만든사람-->
-      <footer>
-        <p>copyright : &copy; 그린컴퓨터 아카데미 학생</p>
-      </footer>
-
+    <!-- 푸터 만든사람-->
+    <footer>
+        <p>Copyright : &copy; 그린컴퓨터 아카데미 학생</p>
+    </footer>
 </body>
 </html>
